# pim-extension

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  pyproject.toml  setup.py
hpim/: __init__.py  hpim_optimize.py  ops.py
hpim/layers/: linear.py  relu.py
proc_in_mem/: __init__.py  hpim_optimize.py  ops.py
proc_in_mem/layers/: linear.py  relu.py
src/: device.cpp  extension.cpp  logging.h
src/hpim/: __init__.py  hpim_optimize.py  ops.py
src/hpim/layers/: linear.py  relu.py
src/hpim/methods/: __init__.py  compile.py  fx.py  swap.py
src/ops/: add.cpp  matmul.cpp  mm.cpp  relu.cpp  transpose.cpp
src/torch_pim/: __init__.py
src/torch_pim/csrc/: InitPimBindings.cpp
src/torch_pim/pim/: __init__.py  pim_optimize.py
test/: test_opcheck.py  test_resnet.py  test_torch_pim.py
test/torch_ops/: test_add.py  test_addmm.py  test_mm.py  test_mul.py  test_relu.py  test_softmax.py  test_sub.py
tests/: core.py  logging_func.py  run.sh  test.py  test_add.py  test_mm.py  test_model.py
torch_hpim/: __init__.py
torch_hpim/csrc/: InitPimBindings.cpp  __device.cpp  device.cpp  extension.cpp
torch_hpim/csrc/common/: PimReshape.cpp  TensorFactories.cpp  TensorShape.cpp  ToKernelPim.cpp
torch_hpim/csrc/core/: FallbackKernel.cpp  PIMAllocator.cpp  PIMGenerator.cpp  PIMGuard.cpp  PIMSerialization.cpp  PIMStorage.cpp
torch_hpim/csrc/device/: allocator.cpp  metadata.cpp
torch_hpim/csrc/ops/: add.cpp  add_pim.cpp  addmm.cpp  addmm_pim.cpp  (+6 more)
torch_hpim/hpim/: hpim_optimize.py  ops.py
torch_pim/csrc/: InitPimBindings.cpp
torch_pim/pim/: ops.py
(+46 files in other folders)
